--- a/src/htmltests/IconBarTester.html
+++ b/src/htmltests/IconBarTester.html
@@ -7,11 +7,11 @@
 <script type="text/javascript" src="../testdata/sgfs.js"></script>
 
 <!-- AUTO-GEN-DEPS -->
-<!-- src sources -->
+<!-- .. sources -->
 <script type="text/javascript" src="../glift.js"></script>
 <script type="text/javascript" src="../global.js"></script>
 <script type="text/javascript" src="../init.js"></script>
-<!-- util sources -->
+<!-- ../util sources -->
 <script type="text/javascript" src="../util/util.js"></script>
 <script type="text/javascript" src="../util/array.js"></script>
 <script type="text/javascript" src="../util/colors.js"></script>
@@ -25,9 +25,9 @@
 <script type="text/javascript" src="../util/platform.js"></script>
 <script type="text/javascript" src="../util/point.js"></script>
 <script type="text/javascript" src="../util/regions.js"></script>
-<!-- ajax sources -->
+<!-- ../ajax sources -->
 <script type="text/javascript" src="../ajax/ajax.js"></script>
-<!-- api sources -->
+<!-- ../api sources -->
 <script type="text/javascript" src="../api/api.js"></script>
 <script type="text/javascript" src="../api/display_options.js"></script>
 <script type="text/javascript" src="../api/hooks.js"></script>
@@ -35,14 +35,14 @@
 <script type="text/javascript" src="../api/options.js"></script>
 <script type="text/javascript" src="../api/sgf_options.js"></script>
 <script type="text/javascript" src="../api/stone_actions.js"></script>
-<!-- controllers sources -->
+<!-- ../controllers sources -->
 <script type="text/javascript" src="../controllers/controllers.js"></script>
 <script type="text/javascript" src="../controllers/base.js"></script>
 <script type="text/javascript" src="../controllers/board_editor.js"></script>
 <script type="text/javascript" src="../controllers/game_figure.js"></script>
 <script type="text/javascript" src="../controllers/game_viewer.js"></script>
 <script type="text/javascript" src="../controllers/static_problem.js"></script>
-<!-- displays sources -->
+<!-- ../displays sources -->
 <script type="text/javascript" src="../displays/displays.js"></script>
 <script type="text/javascript" src="../displays/board_points.js"></script>
 <script type="text/javascript" src="../displays/cropbox_wrapper.js"></script>
@@ -50,33 +50,33 @@
 <script type="text/javascript" src="../displays/ids.js"></script>
 <script type="text/javascript" src="../displays/line_box.js"></script>
 <script type="text/javascript" src="../displays/resized_box.js"></script>
-<!-- dom sources -->
+<!-- ../dom sources -->
 <script type="text/javascript" src="../dom/dom.js"></script>
 <script type="text/javascript" src="../dom/error.js"></script>
 <script type="text/javascript" src="../dom/sanitize.js"></script>
 <script type="text/javascript" src="../dom/ux.js"></script>
-<!-- flattener sources -->
+<!-- ../flattener sources -->
 <script type="text/javascript" src="../flattener/flattener.js"></script>
 <script type="text/javascript" src="../flattener/board.js"></script>
 <script type="text/javascript" src="../flattener/flattened.js"></script>
 <script type="text/javascript" src="../flattener/intersection.js"></script>
 <script type="text/javascript" src="../flattener/labels.js"></script>
 <script type="text/javascript" src="../flattener/symbols.js"></script>
-<!-- markdown sources -->
+<!-- ../markdown sources -->
 <script type="text/javascript" src="../markdown/markdown.js"></script>
 <script type="text/javascript" src="../markdown/marked.js"></script>
-<!-- parse sources -->
-<script type="text/javascript" src="../parse/parse.js"></script>
-<script type="text/javascript" src="../parse/sgf_parser.js"></script>
-<script type="text/javascript" src="../parse/tygem.js"></script>
-<!-- orientation sources -->
+<!-- ../orientation sources -->
 <script type="text/javascript" src="../orientation/orientation.js"></script>
 <script type="text/javascript" src="../orientation/bbox.js"></script>
 <script type="text/javascript" src="../orientation/cropbox.js"></script>
 <script type="text/javascript" src="../orientation/cropping.js"></script>
 <script type="text/javascript" src="../orientation/min_bbox.js"></script>
 <script type="text/javascript" src="../orientation/rotate.js"></script>
-<!-- rules sources -->
+<!-- ../parse sources -->
+<script type="text/javascript" src="../parse/parse.js"></script>
+<script type="text/javascript" src="../parse/sgf_parser.js"></script>
+<script type="text/javascript" src="../parse/tygem.js"></script>
+<!-- ../rules sources -->
 <script type="text/javascript" src="../rules/rules.js"></script>
 <script type="text/javascript" src="../rules/all_properties.js"></script>
 <script type="text/javascript" src="../rules/autonumber.js"></script>
@@ -87,9 +87,9 @@
 <script type="text/javascript" src="../rules/problems.js"></script>
 <script type="text/javascript" src="../rules/properties.js"></script>
 <script type="text/javascript" src="../rules/treepath.js"></script>
-<!-- sgf sources -->
+<!-- ../sgf sources -->
 <script type="text/javascript" src="../sgf/sgf.js"></script>
-<!-- themes sources -->
+<!-- ../themes sources -->
 <script type="text/javascript" src="../themes/themes.js"></script>
 <script type="text/javascript" src="../themes/base_theme.js"></script>
 <script type="text/javascript" src="../themes/classes.js"></script>
@@ -100,11 +100,11 @@
 <script type="text/javascript" src="../themes/moody.js"></script>
 <script type="text/javascript" src="../themes/textbook.js"></script>
 <script type="text/javascript" src="../themes/transparent.js"></script>
-<!-- widgets sources -->
+<!-- ../widgets sources -->
 <script type="text/javascript" src="../widgets/widgets.js"></script>
 <script type="text/javascript" src="../widgets/base_widget.js"></script>
 <script type="text/javascript" src="../widgets/manager.js"></script>
-<!-- widgetopt sources -->
+<!-- ../api/widgetopt sources -->
 <script type="text/javascript" src="../api/widgetopt/widgetopt.js"></script>
 <script type="text/javascript" src="../api/widgetopt/board_editor.js"></script>
 <script type="text/javascript" src="../api/widgetopt/correct_variations_problem.js"></script>
@@ -112,7 +112,7 @@
 <script type="text/javascript" src="../api/widgetopt/game_viewer.js"></script>
 <script type="text/javascript" src="../api/widgetopt/reduced_game_viewer.js"></script>
 <script type="text/javascript" src="../api/widgetopt/standard_problem.js"></script>
-<!-- board sources -->
+<!-- ../displays/board sources -->
 <script type="text/javascript" src="../displays/board/board.js"></script>
 <script type="text/javascript" src="../displays/board/board_base.js"></script>
 <script type="text/javascript" src="../displays/board/board_labels.js"></script>
@@ -122,29 +122,29 @@
 <script type="text/javascript" src="../displays/board/marks.js"></script>
 <script type="text/javascript" src="../displays/board/starpoints.js"></script>
 <script type="text/javascript" src="../displays/board/stones.js"></script>
-<!-- commentbox sources -->
+<!-- ../displays/commentbox sources -->
 <script type="text/javascript" src="../displays/commentbox/commentbox.js"></script>
 <script type="text/javascript" src="../displays/commentbox/create.js"></script>
-<!-- gui sources -->
+<!-- ../displays/gui sources -->
 <script type="text/javascript" src="../displays/gui/gui.js"></script>
 <script type="text/javascript" src="../displays/gui/center.js"></script>
-<!-- icons sources -->
+<!-- ../displays/icons sources -->
 <script type="text/javascript" src="../displays/icons/icons.js"></script>
 <script type="text/javascript" src="../displays/icons/bar.js"></script>
 <script type="text/javascript" src="../displays/icons/icon_centering.js"></script>
 <script type="text/javascript" src="../displays/icons/icon_selector.js"></script>
 <script type="text/javascript" src="../displays/icons/svg.js"></script>
 <script type="text/javascript" src="../displays/icons/wrapped_icon.js"></script>
-<!-- position sources -->
+<!-- ../displays/position sources -->
 <script type="text/javascript" src="../displays/position/position.js"></script>
 <script type="text/javascript" src="../displays/position/widget_boxes.js"></script>
 <script type="text/javascript" src="../displays/position/widget_positioner.js"></script>
-<!-- statusbar sources -->
+<!-- ../displays/statusbar sources -->
 <script type="text/javascript" src="../displays/statusbar/statusbar.js"></script>
 <script type="text/javascript" src="../displays/statusbar/fullscreen.js"></script>
 <script type="text/javascript" src="../displays/statusbar/gameinfo.js"></script>
 <script type="text/javascript" src="../displays/statusbar/info_window.js"></script>
-<!-- svg sources -->
+<!-- ../displays/svg sources -->
 <script type="text/javascript" src="../displays/svg/svg.js"></script>
 <script type="text/javascript" src="../displays/svg/pathutils.js"></script>
 <script type="text/javascript" src="../displays/svg/svgobj.js"></script>
